<resources>
    <string name="app_name">OneLabRetrofitAPI</string>
    <string name="rate">rate</string>
    <string name="character_image">character image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rick_and_morty_character_api">Rick and Morty Character API</string>
    <string name="characters">characters</string>
    <string name="saved">saved</string>
    <string name="species">species:</string>
    <string name="status">status:</string>
    <string name="gender">gender:</string>
    <string name="saved_characters">Saved Characters</string>
    <string name="character_update_cache_channel">Update cache channel</string>
    <string name="character_update_cache_channel_desc">Update cache description</string>
</resources>